# peachy-ir-agent

./: .gitignore  .gitmodules  README.md
.cache/clangd/index/: dummy.cc.008346F337FFA6AB.idx
cc/: CMakeLists.txt  ir.h
cc/include/peachy_ir_agent/: base.h  config.h.in  ir.h  ir_visitor.h  rand.h
cc/include/peachy_ir_agent/bench/: bench.htmpl
cc/include/peachy_ir_agent/codegen/: codegen.h  cpp_gen.h  critical_section.h  local_accum.h
cc/include/peachy_ir_agent/kernels/: matmul.h
cc/include/peachy_ir_agent/search/: collect_transforms.h  cost_model.h  cpu_cost_model.h  random_search.h  search.h
cc/include/peachy_ir_agent/transforms/: parallel.h  predicate.h  reorder.h  result.h  tile.h  tile_resize.h  transform.h  transforms.h
cc/include/peachy_ir_agent/visitor/: collect_loops_visitor.h  ir_printer.h  path_copy_visitor.h
cc/lib/: CMakeLists.txt  ir.cc  rand.cc
cc/lib/codegen/: codegen.cc  cpp_gen.cc  critical_section.cc  local_accum.cc
cc/lib/kernels/: matmul.cc  matmul.h
cc/lib/search/: cpu_cost_model.cc  random_search.cc
cc/lib/transforms/: enclosing_loop_stride_finder.cc  enclosing_loop_stride_finder.h  parallel.cc  reorder.cc  tile.cc  tile_common.cc  tile_common.h  tile_resize.cc  util.cc  util.h
cc/test/: CMakeLists.txt  cpp_gen_test.cc  critical_section_test.cc  ir_test.cc  local_accum_test.cc  parallel_test.cc  reorder_test.cc  tile_resize_test.cc  tile_test.cc
notes/: examples.md  fast.txt
